-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0
-
Windows
ANGLE
When trying to play a video with QML Video component using ANGLE, video renders black. Audio works fine in this scenario. OpenGL and software render properly.
The issue is reproducible with the QML Video Example.
- is duplicated by
-
QTBUG-62017 No video if running "qmlvideo" example with ANGLE on Windows
-
- Closed
-
For Gerrit Dashboard: QTBUG-61407 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
209335,10 | Windows: Fix EVR's rendering of GLTextureHandle frames | 5.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
210593,2 | D3DPresentEngine: Fix rendering of GLTextureHandle frames | 5.10 | qt/qtmultimedia | Status: ABANDONED | 0 | 0 |