Windows: Fix EVR's rendering of GLTextureHandle frames

When ANGLE is used and video frames have GLTextureHandle handle type
black screen is shown while audio is working correctly.

Fixed a bug when opengl texture has not been ever creating.
Fixed a crash when releasing resources due to empty QOpenGLContext.
Also moved gl initialization related code to OpenGLResources.

Task-number: QTBUG-61407
Change-Id: Ifc92a4a2fa2e769494ef962203446a9b3e7dd86d
Reviewed-by: Christian Stromme <christian.stromme@qt.io>